--- a/src/components/SearchBox/SearchBox.css
+++ b/src/components/SearchBox/SearchBox.css
@@ -39,3 +39,45 @@
     opacity: 0.5;
     cursor: not-allowed;
 }
+
+
+@media screen and (min-width:320px) and (max-width:680px) {
+    .search-box__form {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .search-box__form-label {
+        display: inline-block;
+        font-size: 1em;
+        width: 50%;
+        text-align: center;
+        margin-right: 10px;
+    }
+    
+    .search-box__form-input {
+        box-sizing: border-box;
+        display: block;
+        margin-top: 0.5em;
+        width: 90%;
+        font-size: 1.2em;
+        margin: 0.5em;
+        padding: 0.3em 0.5em;
+        border: 1px solid rgba(0, 8, 7, .5);
+    }
+    
+    .search-box__form-submit {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 0.4em;
+        border: none;
+        width: 20%;
+        font-size: 1.2em;
+        height: 5.6vh;
+        padding: 2px;
+        transition: all 0.2s linear;
+        color: #FFEEDB;
+        background-color: rgba(0, 8, 7);
+    }
+}
