--- a/src/pages/MainPage/MainPage.css
+++ b/src/pages/MainPage/MainPage.css
@@ -18,6 +18,20 @@
     width: 35%;   
 }
 
-@media screen and(mi) {
+@media screen and (min-width:320px) and (max-width:680px){
+    .main-page__content {
+        padding: 42px calc(50% - 500px);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .main-page__main-section {
+        padding-left: 0;
+        box-sizing: border-box;
+        width: 99%;
+    }
+    .main-page__favorites {
+        width: 90%;   
+    }
     
 }
