--- a/src/components/Favorites/Favorites.css
+++ b/src/components/Favorites/Favorites.css
@@ -31,9 +31,16 @@
     opacity: 0.9;
     transition: all 0.2s linear;
 }
+.favorites__list--delete{
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+}
+
 .favorites__list--item{
     display: flex;
     justify-content: space-between;
+    margin: 1em;
 }
 .link__none{
     display: none;
