--- a/src/pages/ListPage/ListPage.css
+++ b/src/pages/ListPage/ListPage.css
@@ -22,6 +22,8 @@
     height: 10vw;
 }
 .list-page ul li a{
+    font-size: 5vw;
+    text-align: center;
     color: white;
     font-weight: 500;
     text-decoration: none;
